<resources>
    <string name="app_name">FlexLink</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="device_extender">Extender</string>
    <string name="device_flexlink">FLEXLINK</string>
    <string name="zones">Zones</string>
    <string name="devices">Devices</string>
    <string name="scenes">Scenes</string>
    <string name="schedules">Schedules</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="_default">Default</string>
    <string name="find_device">Find Device</string>
    <string name="cannot_add_any_room">Cannot Add Any Room</string>
    <string name="add_success">Add Success</string>
    <string name="add_failed">Add Failed</string>
    <string name="favorite_color">Favorite Color:</string>
    <string name="color_tag">Color Tag:</string>
    <string name="color_preview">Color Preview:</string>
    <string name="finish">Finish</string>
    <string name="save_failed">save failed please check color params</string>
    <string name="delete_favorite_color">Delete favorite color</string>
    <string name="palette">Palette</string>
    <string name="interaction">Interaction</string>
    <string name="breath">Breath</string>
    <string name="music">Music</string>
    <string name="device_editor">Device Editor</string>
    <string name="schedule_editor">Schedule Editor</string>
    <string name="zone_editor">Zone Editor</string>
    <string name="add_scene">Add Scene</string>
    <string name="rainbow_breath">RainbowBreath</string>
    <string name="heartbeat">HeartBeat</string>
    <string name="green_breath">GreenBreath</string>
    <string name="blue_breath">BlueBreath</string>
    <string name="alarm">Alarm</string>
    <string name="flash">Flash</string>
    <string name="breathings">Breathings</string>
    <string name="green_mood">GreenMood</string>
    <string name="setting_sun">SettingSun</string>
    <string name="music_name">Music Name</string>
    <string name="music_singer">Music Singer</string>
    <string name="no_music">there no music in your phone</string>
    <string name="sun_set">Sunset</string>
    <string name="work_day">Workday</string>
    <string name="every_day">EveryDay</string>
    <string name="never_repeat">Never</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tus">Tus</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="custom">Custom</string>
    <string name="events">Events</string>
    <string name="title">title</string>
    <string name="custom_week">Custom Week</string>
    <string name="cannot_add_any_timing">Cannot add any timing</string>
    <string name="device_name">Device Name</string>
    <string name="hint_name">Input Name</string>
    <string name="remove_zone">Remove Zone</string>
    <string name="enter">Enter</string>
    <string name="remove_failed">Remove Failed</string>
    <string name="save_success">Save Success</string>
    <string name="remove_success">Remove Success</string>
    <string name="zone_name">Zone Name</string>
    <string name="remove_device">Remove Device</string>
    <string name="null_fragment">Its Null Fragment</string>
    <string name="selected">Selected</string>
    <string name="select">Select</string>
    <string name="scene_name">Scene Name</string>
    <string name="run">Run</string>
    <string name="cannot_add_any_scene">Cannot add any scene</string>
    <string name="step1">Step1</string>
    <string name="step2">Step2</string>
    <string name="schedule_or_not">Schedule or Not</string>
    <string name="select_devices">Select Devices</string>
    <string name="or">or</string>
    <string name="not_schedule">Not Schedule</string>
    <string name="save">Save</string>
    <string name="platte_action">Platte/Action</string>
    <string name="action">Action</string>
    <string name="current_color">Current Color</string>
    <string name="delete_fail">Delete Fail</string>

    <string name="success_add_device">"Successfully add  device: "</string>
    <string name="done">Done</string>
    <string name="please_restart_ble">Please Restart the Bluetooth</string>
    <string name="search">Searching Device</string>
    <string name="add_dev_fail">Failed to add device</string>
    <string name="cannot_add_any_device">sorry,you had 256 device,can not add anymore</string>
    <string name="ble_close">Bluetooth Closed</string>
    <string name="continue_add">Continue Add?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_device">Add Device</string>
    <string name="lighting_network_list">Lighting Network List</string>
    <string name="lighting_network">Lighting Network</string>
    <string name="information">Information</string>
    <string name="network_manager">Network Manager</string>
    <string name="network_share">Network Share</string>
    <string name="about_us">About Us</string>
    <string name="stop_scan">Stop Scan Device</string>
    <string name="new_home_name">New Network</string>
    <string name="add_network">Add Network</string>

    <string name="cant_create_network">Can not create the current network</string>
    <string name="cant_include">\? cannot be included in the network name</string>
    <string name="network_is_exist">The network already exists</string>
    <string name="name_can_not_null">Name can not null</string>
    <string name="name_too_long">Name too long(No more than a 12 letter.)</string>
    <string name="sun_rise">Sunrise</string>
    <string name="coolwarm_0_0">CoolWarm(0,0)</string>
    <string name="rgb_0_0_0">RGB(0,0,0)</string>
    <string name="_0">0%</string>
    <string name="share_history">Share History</string>
    <string name="history">History</string>
    <string name="become_a_sharer">Become a Sharer</string>
    <string name="become_a_sharees">Become a Sharees</string>
    <string name="sussess">Sussess</string>
    <string name="share_sender">Sharer</string>
    <string name="net_name">Net Name</string>
    <string name="ok">OK</string>
    <string name="wait_share_send_data_reminder">Waiting for other users to share data</string>
    <string name="share_success">Share Success</string>
    <string name="share_fail">Share Failed</string>
    <string name="share_time_out">Share Time Out</string>
    <string name="choose_mesh_reminder">Select Network</string>
    <string name="share_receiver">Recipient</string>
    <string name="pone_list">Phone List</string>
    <string name="wait_share_online">Waiting for the recipient to go online</string>
    <string name="share_start_reminder">Please open the「Share」page and click 「 Receive Share」</string>
    <string name="check_user_reminder">Please Select Recipient</string>
    <string name="select_lighting_network">Select Lighting Network</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="schedule_events">Schedule Events</string>
    <string name="zone_manager">Zone Manager</string>
    <string name="allocate_devices">Allocate Devices</string>
    <string name="clear_setting">Clear Setting</string>
    <string name="send_share_info">Send Share</string>
    <string name="receive_share_info">Receive Share</string>
    <string name="set_sunset_time">Set Sunset Time</string>
    <string name="set_durtime">Set Durtime</string>
    <string name="mins">Mins</string>
    <string name="make_sure_be_same_wifi">Make sure the Sharer and Recipient are connected to the same WiFi</string>
    <string name="connect_wifi">Connect to WiFi and try again</string>
    <string name="no_permission">No Permission</string>
    <string name="no_locate_permission">Location permission is not available</string>
    <string name="no_recode_sdcard_permission">Recording, read SD card permission is not available</string>
    <string name="no_recode_permission">Recording permission is not available</string>
    <string name="no_sdcard_permission">Read SD card permission is not available</string>

    <string name="tip_no_locate_permission">The current user has denied the permission application and will not be able to continue without this permission</string>
    <string name="tip_no_locate_sdcard_permission">The current user has denied the permission application and will not be able to continue without this permission</string>
    <string name="get_permissions">Permissions Succeeded</string>
    <string name="all_devices">All Devices</string>
    <string name="cant_add_any_favorite_color">Can\'t Add More FavoriteColor</string>
    <string name="zone_schedule">Zone Schedule</string>
    <string name="device_schedule">Device Schedule</string>
    <string name="devices_">Devices-</string>
    <string name="pls_choose_execute_date">Please choose execute date</string>

    <string name="delete_network_reminder">Deleting this Network will erase all configuration information, confirm delete?</string>
    <string name="delete_device_reminder">After deleting the device, all the information of the device will be deleted. Are you sure to delete it?</string>
    <string name="delete_room_reminder">After deleting the room, all the information in the room will be deleted. Are you sure to delete it?</string>
    <string name="delete">Delete</string>

    <string name="title_zone">Zones-%d</string>
    <string name="title_device">Devices-%d</string>
    <string name="title_scenes">Scenes-%d</string>
    <string name="title_schedules">Schedules-%d</string>
    <string name="title_network">Lighting Network List—%d</string>

    <string name="title_format">%s-%d</string>
</resources>
