<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="254dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/delete_room_reminder"
        android:textColor="@color/grey_999" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/grey_ddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_90px"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Custom_Tips_Btn"
            android:text="@string/cancel" />

        <View
            android:layout_width="0.3dp"
            android:layout_height="wrap_content"
            android:background="@color/grey_ddd" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Custom_Tips_Btn"
            android:text="@string/confirm" />

    </LinearLayout>


</LinearLayout>