<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_round_title_primary"
        android:gravity="center"
        android:text="@string/set_sunset_time"
        android:textColor="@color/white" />

    <com.ws.mesh.incores2.view.control.CustomTimePicker
        android:id="@+id/ctp_time"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:timePickerMode="spinner">

    </com.ws.mesh.incores2.view.control.CustomTimePicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>