<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_custom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/custom_week"
        android:textColor="@color/black_333"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="12dp"
        android:background="@color/grey_ddd" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/grey_ddd" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height_90px"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Custom_Tips_Btn"
            android:text="@string/cancel" />

        <View
            android:layout_width="0.3dp"
            android:layout_height="wrap_content"
            android:background="@color/grey_ddd" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/Custom_Tips_Btn"
            android:text="@string/confirm" />

    </LinearLayout>
</LinearLayout>