<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/scene_name"
            android:textColor="@color/black_333"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_round_white">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_round_white"
            android:enabled="false"
            android:hint="@string/hint_name"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black_333"
            android:textColorHint="@color/grey_929292" />

        <TextView
            android:id="@+id/tv_enter"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_round_primary_border"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_edit_name"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:padding="7dp"
            android:src="@drawable/icon_edit_pencil"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/step1"
            android:textColor="@color/black_333"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_set_schedule"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_white">

        <LinearLayout
            android:id="@+id/ll_time_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:00 AM"
                android:textColor="@color/black_333"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/tv_week_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/every_day"
                android:textColor="@color/black_333"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/schedule_or_not"
            android:textColor="@color/black_333"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/list_icon_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/step2"
            android:textColor="@color/black_333"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_select_device"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round_white">

        <TextView
            android:id="@+id/tv_device_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/devices_"
            android:textColor="@color/black_333"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_select_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_devices"
            android:textColor="@color/black_333"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/list_icon_arrow" />
    </RelativeLayout>
</LinearLayout>